- Fix a minor issue with mobile sidepane alignment.

--- a/assets/css/src/side-menu.scss
+++ b/assets/css/src/side-menu.scss
@@ -14,11 +14,11 @@
   }
 }
 
-#sticky-search>.inner {
+#sticky-search > .inner {
   display: none;
 }
 
-.is-sticky #sticky-search>.inner {
+.is-sticky #sticky-search > .inner {
   display: block;
 }
 
@@ -64,6 +64,7 @@ body {
     width: 100vw;
     position: fixed;
     right: 0;
+    left: 0;
     background: rgba($dark-1, 0.95);
     top: 0;
     height: 100vh;
